@@ -7136,25 +7136,92 @@ interface <b>SVGFEBlendElement</b> : <a>SVGElement</a> {
   readonly attribute <a>SVGAnimatedNumber</a> <a href="#SVGFEDropShadowElement__dy">dy</a>;
   readonly attribute <a>SVGAnimatedNumber</a> <a href="#SVGFEDropShadowElement__stdDeviationX">stdDeviationX</a>;
   readonly attribute <a>SVGAnimatedNumber</a> <a href="#SVGFEDropShadowElement__stdDeviationY">stdDeviationY</a>;
+
+  void <a href="#SVGFEDropShadowElement__setStdDeviation">setStdDeviation</a>(in float stdDeviationX, in float stdDeviationY);
 };
 
 <a>SVGFEDropShadowElement</a> implements <a>SVGFilterPrimitiveStandardAttributes</a>;</pre>
 
-<dl class="interface"><dt>Attributes:</dt><dd><dl class="attributes">
+<dl class="interface">
+<dt>Attributes:</dt>
+<dd>
+<dl class="attributes">
 <dt id="SVGFEDropShadowElement__in1"><b>in1</b><span class="idl-type-parenthetical"> (readonly <a>SVGAnimatedString</a>)</span></dt>
 <dd>
+<div>
+  Corresponds to attribute <a>'filter primitive/in'</a> on the given <a>'feDropShadow element'</a> element.
+</div>
 </dd>
+
 <dt id="SVGFEDropShadowElement__dx"><b>dx</b><span class="idl-type-parenthetical"> (readonly <a>SVGAnimatedNumber</a>)</span></dt>
 <dd>
+<div>
+  Corresponds to attribute <a>'feDropShadow/dx'</a> on the given <a>'feDropShadow element'</a> element.
+</div>
 </dd>
+
 <dt id="SVGFEDropShadowElement__dy"><b>dy</b><span class="idl-type-parenthetical"> (readonly <a>SVGAnimatedNumber</a>)</span></dt>
 <dd>
+<div>
+  Corresponds to attribute <a>'feDropShadow/dy'</a> on the given <a>'feDropShadow element'</a> element.
+</div>
 </dd>
+
 <dt id="SVGFEDropShadowElement__stdDeviationX"><b>stdDeviationX</b><span class="idl-type-parenthetical"> (readonly <a>SVGAnimatedNumber</a>)</span></dt>
 <dd>
+<div>
+  Corresponds to attribute <a>'feDropShadow/stdDeviation'</a> on the given <a>'feDropShadow element'</a> element.
+  Contains the X component of attribute <a>'feDropShadow/stdDeviation'</a>.
+</div>
 </dd>
-<dt id="SVGFEDropShadowElement__stdDeviationY"><b>stdDeviationY</b><span class="idl-type-parenthetical"> (readonly <a>SVGAnimatedNumber</a>)</span></dt>
+
+<dt id="SVGFEDropShadowElement__stdDeviationX"><b>stdDeviationY</b><span class="idl-type-parenthetical"> (readonly <a>SVGAnimatedNumber</a>)</span></dt>
 <dd>
+<div>
+  Corresponds to attribute <a>'feDropShadow/stdDeviation'</a> on the given <a>'feDropShadow element'</a> element.
+  Contains the Y component (possibly computed automatically) of attribute <a>'feDropShadow/stdDeviation'</a>.
+</div>
+</dd>
+</dl>
+</dd>
+
+<dt>Operations:</dt>
+<dd>
+<dl class="attributes">
+<dt id="SVGFEDropShadowElement__setStdDeviation">void <b>setStdDeviation</b>(in float <var>stdDeviationX</var>, in float <var>stdDeviationY</var>)</dt>
+<dd>
+<div>
+  Sets the values for attribute <a>'feDropShadow/stdDeviation'</a>.
+</div>
+
+<dl class="operation">
+<dt>Parameters</dt>
+<dd>
+<ol class="parameters">
+<li>
+<div class="parameter">float <var>stdDeviationX</var></div>
+<div>
+  The X component of attribute <a>'feDropShadow/stdDeviation'</a>.
+</div>
+</li>
+<li>
+<div class="parameter">float <var>stdDeviationY</var></div>
+<div>
+  The Y component of attribute <a>'feDropShadow/stdDeviation'</a>.
+</div>
+</li>
+</ol>
+</dd>
+
+<dt>Exceptions</dt>
+<dd>
+<dl class="exceptions">
+<dt><a class="idlinterface" href="http://www.w3.org/TR/DOM-Level-2-Core/core.html#ID-17189187">DOMException</a>, code NO_MODIFICATION_ALLOWED_ERR</dt>
+<dd>Raised on an attempt to change the value of a readonly attribute.
+</dd>
+</dl>
+</dd>
+</dl>
 </dd>
 </dl>
 </dd>
