@@ -14206,6 +14206,9 @@ interface <b>SVGFEBlendElement</b> : <a
   readonly attribute <a
        href="http://www.w3.org/TR/2011/REC-SVG11-20110816/types.html#InterfaceSVGAnimatedNumber">SVGAnimatedNumber</a> <a
        href="#SVGFEDropShadowElement__stdDeviationY">stdDeviationY</a>;
+
+  void <a
+       href="#SVGFEDropShadowElement__setStdDeviation">setStdDeviation</a>(in float stdDeviationX, in float stdDeviationY);
 };
 
 <a
@@ -14222,18 +14225,32 @@ interface <b>SVGFEBlendElement</b> : <a
           href="http://www.w3.org/TR/2011/REC-SVG11-20110816/types.html#InterfaceSVGAnimatedString">SVGAnimatedString</a>)</span>
 
          <dd>
+          <div> Corresponds to attribute <span class=xxx>‘<code
+           class=css>filter primitive/in</code>’</span> on the given <a
+           class=element-name href="#feDropShadowElement">‘<code
+           class=property>feDropShadow</code>’</a> element.</div>
 
          <dt id="SVGFEDropShadowElement__dx"><b>dx</b><span
           class=idl-type-parenthetical> (readonly <a
           href="http://www.w3.org/TR/2011/REC-SVG11-20110816/types.html#InterfaceSVGAnimatedNumber">SVGAnimatedNumber</a>)</span>
 
          <dd>
+          <div> Corresponds to attribute <a class=attr-name
+           href="#feDropShadowDxAttribute">‘<code
+           class=property>dx</code>’</a> on the given <a class=element-name
+           href="#feDropShadowElement">‘<code
+           class=property>feDropShadow</code>’</a> element.</div>
 
          <dt id="SVGFEDropShadowElement__dy"><b>dy</b><span
           class=idl-type-parenthetical> (readonly <a
           href="http://www.w3.org/TR/2011/REC-SVG11-20110816/types.html#InterfaceSVGAnimatedNumber">SVGAnimatedNumber</a>)</span>
 
          <dd>
+          <div> Corresponds to attribute <a class=attr-name
+           href="#feDropShadowDyAttribute">‘<code
+           class=property>dy</code>’</a> on the given <a class=element-name
+           href="#feDropShadowElement">‘<code
+           class=property>feDropShadow</code>’</a> element.</div>
 
          <dt
           id="SVGFEDropShadowElement__stdDeviationX"><b>stdDeviationX</b><span
@@ -14241,13 +14258,76 @@ interface <b>SVGFEBlendElement</b> : <a
           href="http://www.w3.org/TR/2011/REC-SVG11-20110816/types.html#InterfaceSVGAnimatedNumber">SVGAnimatedNumber</a>)</span>
 
          <dd>
+          <div> Corresponds to attribute <a class=attr-name
+           href="#feDropShadowStdDeviationAttribute">‘<code
+           class=property>stdDeviation</code>’</a> on the given <a
+           class=element-name href="#feDropShadowElement">‘<code
+           class=property>feDropShadow</code>’</a> element. Contains the X
+           component of attribute <a class=attr-name
+           href="#feDropShadowStdDeviationAttribute">‘<code
+           class=property>stdDeviation</code>’</a>.</div>
 
          <dt
-          id="SVGFEDropShadowElement__stdDeviationY"><b>stdDeviationY</b><span
+          id="SVGFEDropShadowElement__stdDeviationX"><b>stdDeviationY</b><span
           class=idl-type-parenthetical> (readonly <a
           href="http://www.w3.org/TR/2011/REC-SVG11-20110816/types.html#InterfaceSVGAnimatedNumber">SVGAnimatedNumber</a>)</span>
 
          <dd>
+          <div> Corresponds to attribute <a class=attr-name
+           href="#feDropShadowStdDeviationAttribute">‘<code
+           class=property>stdDeviation</code>’</a> on the given <a
+           class=element-name href="#feDropShadowElement">‘<code
+           class=property>feDropShadow</code>’</a> element. Contains the Y
+           component (possibly computed automatically) of attribute <a
+           class=attr-name href="#feDropShadowStdDeviationAttribute">‘<code
+           class=property>stdDeviation</code>’</a>.</div>
+        </dl>
+
+       <dt>Operations:
+
+       <dd>
+        <dl class=attributes>
+         <dt id="SVGFEDropShadowElement__setStdDeviation">void
+          <b>setStdDeviation</b>(in float <var>stdDeviationX</var>, in float
+          <var>stdDeviationY</var>)
+
+         <dd>
+          <div> Sets the values for attribute <a class=attr-name
+           href="#feDropShadowStdDeviationAttribute">‘<code
+           class=property>stdDeviation</code>’</a>.</div>
+
+          <dl class=operation>
+           <dt>Parameters
+
+           <dd>
+            <ol class=parameters>
+             <li>
+              <div class=parameter>float <var>stdDeviationX</var></div>
+
+              <div> The X component of attribute <a class=attr-name
+               href="#feDropShadowStdDeviationAttribute">‘<code
+               class=property>stdDeviation</code>’</a>.</div>
+
+             <li>
+              <div class=parameter>float <var>stdDeviationY</var></div>
+
+              <div> The Y component of attribute <a class=attr-name
+               href="#feDropShadowStdDeviationAttribute">‘<code
+               class=property>stdDeviation</code>’</a>.</div>
+            </ol>
+
+           <dt>Exceptions
+
+           <dd>
+            <dl class=exceptions>
+             <dt><a class=idlinterface
+              href="http://www.w3.org/TR/DOM-Level-2-Core/core.html#ID-17189187">DOMException</a>,
+              code NO_MODIFICATION_ALLOWED_ERR
+
+             <dd>Raised on an attempt to change the value of a readonly
+              attribute.
+            </dl>
+          </dl>
         </dl>
       </dl>
 
