@@ -1,6 +1,9 @@
 Changes for Filter Effects specification
 ----------------------------------------
 2012-11-06  Dirk Schulze  <dschulze@adobe.com>
+- Add interface defintion for feDropShadow.
+
+2012-11-06  Dirk Schulze  <dschulze@adobe.com>
 - Cleanup interface code and auto generate links.
 - Remove ImageData interface and link to context2d (WD).
 
